crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_244_Decathlon_Decathlon_Unl.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-244-Decathlon/Decathlon (Unl).nes
rom_sha256=b51a894b0e478bc16f88fb1940dad05109ad1f23897b778506349dda26adae24
frames=1141
fb_bytes=245760
cycles=33949776
audio_samples=836505
audio_fnv1a64=0857572fda4c6bf3
checkpoint f900 fb_fnv1a64=202c297153a2f2c8
checkpoint f1100 fb_fnv1a64=202c297153a2f2c8
