crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_244_Decathlon_Kyatto_Ninden_Teyandee_1stage_by_ZURG_Hack.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-244-Decathlon/Kyatto Ninden Teyandee 1stage by ZURG (Hack).nes
rom_sha256=c33b1cf5307f5be2ec48e0f43309097e0f95b1c93c4a5f0febde215092876f8c
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=9c1c04c819dbf7a8
checkpoint f900 fb_fnv1a64=7e3acfcb1ca55c16
checkpoint f1100 fb_fnv1a64=96006ed755b67ed0
