crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_244_Decathlon_Matendouji_J.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-244-Decathlon/Matendouji (J) [!].nes
rom_sha256=7ea97bedd73f0ee2f7fb3c8c0f1756cea5307f70d0430464901b085f5d293454
frames=1141
fb_bytes=245760
cycles=33949787
audio_samples=836505
audio_fnv1a64=232f1f6738a886a7
checkpoint f900 fb_fnv1a64=4e29c74d387a8279
checkpoint f1100 fb_fnv1a64=4e29c74d387a8279
