crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_245_WaixingMMC3_Di_Guo_Shi_Dai_Age_of_Empires_ES_1070_Ch_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-245-WaixingMMC3/Di Guo Shi Dai (Age of Empires) (ES-1070) (Ch).zip
rom_sha256=d21052d50c990c56f2484331870082df96a1130892c42f2a55d8715458434044
frames=1141
fb_bytes=245760
cycles=33949786
audio_samples=836505
audio_fnv1a64=ee90ceb026269c60
checkpoint f900 fb_fnv1a64=0e4e8fb6f0da900d
checkpoint f1100 fb_fnv1a64=4743db10957d5345
