crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_246_FongShenBang_Feng_Shen_Bang_Asia_Ja_Unl.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-246-FongShenBang/Feng Shen Bang (Asia) (Ja) (Unl).nes
rom_sha256=87d4ecee39c064b1b3fe3524969410fde7d05f61ca2a92be26356696c3117c0a
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=6194b0a041f4dca8
checkpoint f900 fb_fnv1a64=1d76de391c985a23
checkpoint f1100 fb_fnv1a64=0a982956b5c5a328
