crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_246_FongShenBang_Fong_Shen_Bang_Zhu_Lu_Zhi_Zhan_Ch.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-246-FongShenBang/Fong Shen Bang - Zhu Lu Zhi Zhan (Ch).nes
rom_sha256=f3596ffda5c1b83821e58d15827a3a2fbc94c85352b7a5b834c1039e70509a25
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=6194b0a041f4dca8
checkpoint f900 fb_fnv1a64=1d76de391c985a23
checkpoint f1100 fb_fnv1a64=0a982956b5c5a328
